<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:dist="http://schemas.android.com/apk/distribution" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/relativeLayout" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@+id/back_image" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/login_back" android:scaleType="fitXY"/>
    <RelativeLayout android:id="@+id/login_trans" android:background="@drawable/login_trans" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <ImageView android:id="@+id/logo_view" android:layout_width="60dp" android:layout_height="60dp" android:layout_marginTop="-10dp" android:src="@drawable/vayam" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
        <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="@color/colorPrimary" android:id="@+id/welcome" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/lets_get_started" android:layout_below="@+id/logo_view" android:layout_centerHorizontal="true"/>
        <com.hbb20.CountryCodePicker android:id="@+id/countryCodePicker" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_below="@+id/welcome" android:layout_centerHorizontal="true" android:layout_marginStart="10dp" app:ccp_autoDetectCountry="true" app:ccp_textSize="16sp"/>
        <EditText android:id="@+id/reg_phone_id" android:background="@drawable/inputs" android:padding="2dp" android:layout_width="wrap_content" android:layout_height="40dp" android:layout_marginTop="5dp" android:hint="@string/enter_your_phone_number" android:drawablePadding="3dp" android:layout_below="@+id/countryCodePicker" android:layout_centerInParent="true" android:inputType="phone" android:drawableStart="@drawable/custom_phone" android:textAlignment="textStart" android:paddingStart="20dp" android:paddingEnd="20dp"/>
        <TextView android:textSize="15sp" android:textStyle="italic" android:textColor="@color/colorPrimary" android:id="@+id/code_send_msg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/text_send_message" android:layout_below="@+id/reg_phone_id" android:layout_centerHorizontal="true"/>
        <Button android:textSize="16sp" android:textColor="@color/colorAccent" android:id="@+id/reg_send_otp_button" android:background="@drawable/buttons" android:paddingLeft="5dp" android:paddingRight="5dp" android:layout_width="wrap_content" android:layout_height="40dp" android:layout_marginTop="10dp" android:text="@string/send_otp" android:layout_below="@+id/code_send_msg" android:layout_centerHorizontal="true"/>
        <TextView android:textSize="16sp" android:textColor="@color/colorBlue" android:id="@+id/back_login_link" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/already_have_an_account" android:layout_below="@+id/reg_send_otp_button" android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <ProgressBar android:id="@+id/loadingBar" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminate="true" android:indeterminateDrawable="@drawable/loading_bar" android:layout_centerInParent="true" style="?android:attr/progressBarStyleLarge"/>
</RelativeLayout>
